<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_likes" translatable="false">Post likes</string>
    <string name="description_post_shares" translatable="false">Post shares</string>
    <string name="description_post_views" translatable="false">Post views</string>
    <string name="views_count" translatable="false">5</string>
    <string name="remove">Remove</string>
    <string name="post_input_hint">Post content</string>
    <string name="content_is_blank_error">Content is blank</string>
    <string name="edit">Edit</string>
    <string name="edit_hint">Edit post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Add</string>
    <string name="description_play_video" translatable="false">Post views</string>
    <string name="description_video_content" translatable="false">Post views</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">User %1$s published a new post</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="no_posts">No posts</string>

</resources>